@@ -319,55 +319,6 @@ default, they are sent to the current output port.
 
 @twerpdoc (pg-parameter-status)
 
-@section Client Data
-
-The libpq interface upon which Guile-PG is built supports association of
-arbitrary data with a connection.  You can use these @dfn{client data}
-procedures or the more general @dfn{object property} procedures in Guile.
-
-@twerpdoc (pg-get-client-data)
-
-@twerpdoc (pg-set-client-data!)
-
-@heading Example
-The following is a set of three procedures which implement a database
-connection object that logs all the SQL statements it executes.
-
-@lisp
-(define (pg-connectdb/logged options)
-  (let ((conn (pg-connectdb options)))
-    (and conn
-         (begin (pg-set-client-data! conn '())
-                conn))))
-
-(define (pg-exec/logged conn sql)
-  (pg-set-client-data! conn (append (pg-get-client-data conn)
-                                    (list sql)))
-  (pg-exec conn sql))
-
-(define (conn-log conn)
-  (pg-get-client-data conn))
-@end lisp
-
-Here is an implementation using object properties,
-using the object property @code{log}.
-
-@lisp
-(define log (make-object-property))
-
-(define (pg-connectdb/logged options)
-  (let ((conn (pg-connectdb options)))
-    (set! (log conn) '())
-    conn))
-
-(define (pg-exec/logged conn sql)
-  (set! (log conn) (append! (log conn) (list sql)))
-  (pg-exec conn sql))
-
-(define (conn-log conn)
-  (log conn))
-@end lisp
-
 @section Asynchronous Notifications
 
 The PostgreSQL back-end supports @dfn{asynchronous notifications}
