@@ -1,5 +1,12 @@
 2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	Drop procs `pg-set-client-data!', `pg-get-client-data'.
+
+	* basic.scm (test:set-client-data, test:get-client-data):
+	Eviscerate; simply return, and check for, the symbol `defunct'.
+
+2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	Drop proc `pg-lo-get-connection'.
 
 	* large.scm (test:lo-open-read): Don't call `pg-lo-get-connection'.
